--- a/packages/dnb-eufemia/src/elements/lists/style/lists-mixins.scss
+++ b/packages/dnb-eufemia/src/elements/lists/style/lists-mixins.scss
@@ -42,9 +42,7 @@
 }
 
 @mixin ulStyle() {
-  &:not([class*='dnb-space']) {
-    margin: 0;
-  }
+  @include spaceReset();
 
   padding: 0;
   &:not([class*='dnb-space__left']) {
@@ -277,9 +275,7 @@
 @mixin unstyledList() {
   list-style-type: none;
 
-  &:not([class*='dnb-space']) {
-    margin: 0;
-  }
+  @include spaceReset();
   &:not([class*='dnb-space__left']) {
     padding-left: 0;
   }
