--- a/packages/dnb-eufemia/src/style/core/utilities.scss
+++ b/packages/dnb-eufemia/src/style/core/utilities.scss
@@ -377,19 +377,30 @@ $breakpoint-offset: 0;
   }
 }
 
-@mixin fieldsetReset() {
+@mixin spaceVerticalReset() {
   &:not([class*='space__top']) {
     margin-top: 0;
-  }
-  &:not([class*='space__right']) {
-    margin-right: 0;
   }
   &:not([class*='space__bottom']) {
     margin-bottom: 0;
   }
+}
+@mixin spaceHorizontalReset() {
   &:not([class*='space__left']) {
     margin-left: 0;
   }
+  &:not([class*='space__right']) {
+    margin-right: 0;
+  }
+}
+
+@mixin spaceReset() {
+  @include spaceVerticalReset();
+  @include spaceHorizontalReset();
+}
+
+@mixin fieldsetReset() {
+  @include spaceReset();
   padding: 0;
   border: none;
 }
